--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch>=2.0.0
-torchvision>=0.15.0
+torch==2.0.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.15.0 --index-url https://download.pytorch.org/whl/cpu
 pillow>=9.0.0
 flask>=2.3.0
 requests>=2.31.0
