--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==2.9.1 --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.24.1 --index-url https://download.pytorch.org/whl/cpu
+torch==2.9.1
+torchvision==0.24.1
 pillow>=9.0.0
 flask>=2.3.0
 requests>=2.31.0
@@ -7,3 +7,5 @@ numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 python-dotenv>=1.0.0
+
+--index-url https://download.pytorch.org/whl/cpu
