--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ pandas>=2.0.0
 scikit-learn>=1.3.0
 python-dotenv>=1.0.0
 
---index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
