--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 python-dotenv>=1.0.0
+tqdm>=4.66.0
 
 --extra-index-url https://download.pytorch.org/whl/cpu
